@@ -1405,6 +1405,16 @@ function dlc_data_for_dlc_page() {
 	});
 }
 
+function enhance_game_background(type) {
+	if (type == "sale") {
+		$("#game_background").css("background-size", "initial");
+	} else {
+		$("#game_background").before("<div id='es_background_gradient'></div>");
+	}
+
+	$("#game_background").css("display", "block");
+}
+
 function add_app_badge_progress(appid) {
 	if ($(".icon").find('img[src$="/ico_cards.png"]').length > 0) {
 		$(".communitylink .block_content:last").append("<div class='rule'></div><div class='block_content_inner'><link rel='stylesheet' type='text/css' href='http://cdn.steamcommunity.com/public/css/skin_1/badges.css'><div class='es_badge_progress'></div><div class='es_foil_badge_progress'></div></div><div style=\"clear: both\"></div>");
@@ -3990,6 +4000,7 @@ $(document).ready(function(){
 							});
 							show_pricing_history(appid, "app");
 							dlc_data_from_site(appid);
+							enhance_game_background();
 
 							drm_warnings();
 							add_metracritic_userscore();
@@ -4015,6 +4026,7 @@ $(document).ready(function(){
 
 						case /^\/sub\/.*/.test(window.location.pathname):
 							var subid = get_subid(window.location.host + window.location.pathname);
+							enhance_game_background();
 							drm_warnings();
 							subscription_savings_check();
 							show_pricing_history(subid, "sub");
@@ -4046,6 +4058,7 @@ $(document).ready(function(){
 
 						case /^\/sale\/.*/.test(window.location.pathname):
 							show_regional_pricing();
+							enhance_game_background("sale");
 							break;
 
 						// Storefront-front only
