@@ -1,6 +1,7 @@
 v6.1
 -----
 + Added a "Popular" tab on the homepage to browse the most-played games on Steam
++ Store pages now display a full size background
 
 
 v6.0.1
